# tstopwatch

./: Cargo.toml  LICENSE  README.md  stopwatch.json
src/: config.json  draw.rs  main.rs  stopwatch.rs
