[package]
name = "tstopwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.1", features = ["serde"] }
confy = "0.5.1"
serde_derive = "1.0.160"
serde = "1.0.160"
chrono = "0.4.24"
